sumo/tests/jtrrouter/errors/network/edges/root__edges__empty/errors.jtrrouter
Error: An unknown edge occured within 'net.net.xml' (id='1').
Error: An unknown edge occured within 'net.net.xml' (id='2').
Quitting (on error).
